# vgdl_env

./: MANIFEST.in  README.md  VGDLEnv.py  VGDLEnvAndres.py  __init__.py  pyproject.toml  setup.py  utils.py
games/bait_v0/: bait.txt  bait_lvl0.txt  bait_lvl1.txt  bait_lvl2.txt  bait_lvl3.txt  bait_lvl4.txt  bait_lvl5.txt  bait_lvl6.txt  bait_lvl7.txt  bait_lvl8.txt
games/chase_v0/: chase.txt  chase_lvl0.txt  chase_lvl1.txt  chase_lvl2.txt  chase_lvl3.txt  chase_lvl4.txt  chase_lvl5.txt  chase_lvl6.txt  chase_lvl7.txt  chase_lvl8.txt
games/helper_v0/: helper.txt  helper_lvl0.txt  helper_lvl1.txt  helper_lvl2.txt  helper_lvl3.txt  helper_lvl4.txt  helper_lvl5.txt  helper_lvl6.txt  helper_lvl7.txt  helper_lvl8.txt
games/lemmings_v0/: lemmings.txt  lemmings_lvl0.txt  lemmings_lvl1.txt  lemmings_lvl2.txt  lemmings_lvl3.txt  lemmings_lvl4.txt  lemmings_lvl5.txt  lemmings_lvl6.txt  lemmings_lvl7.txt  lemmings_lvl8.txt
stateobs/: __init__.py
vgdl./: WBP.py  WBP2.py  WBP3.py  WBP4.py  WBP5.py  WBP6.py  WBP8.py  WBP_class.py  WBP_grid.py  WBP_one_hot.py  WBP_stable.py  __init__.py  aStar.py  agent.py  agent2.py  agent_backup.py  agent_saved.py  agents.py  ai.py  ai_algorithms.py  bigloop.py  bigloop2.py  class_theory_template.py  colors.py  core.py  core2.py  core_comments.py  core_old.py  goal_programming.py  induction.py  interfaces.py  load_games.py  main_agent.py  make_videos.py  mcts.py  mcts2.py  mcts_clean.py  mcts_old.py  mcts_pseudoreward_heuristic.py  mcts_pseudoreward_heuristic_b.py  (+25 more)
vgdl_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+28 files in other folders)
